log
Thu 07 Sep 2023 05:00:21 PM UTC: 
 hashmap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:23: error: expected ‘;’ before ‘}’ token
   49 |     map->current = pos
      |                       ^
      |                       ;
   50 |   }
      |   ~                    
hashmap.c:58:30: error: expected ‘;’ before ‘map’
   58 |         map->buckets[i] = par
      |                              ^
      |                              ;
   59 |         map->current = j;
      |         ~~~                   
Compilation failed
78d110c
Thu 07 Sep 2023 05:07:06 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
c0b1931
Thu 07 Sep 2023 05:10:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/70
5900429
Thu 07 Sep 2023 05:32:57 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:79:17: error: invalid initializer
   79 |   HashMap map = malloc(sizeof(HashMap));
      |                 ^~~~~~
hashmap.c:80:10: error: invalid operands to binary == (have ‘HashMap’ {aka ‘struct HashMap’} and ‘void *’)
   80 |   if(map == NULL) exit(EXIT_FAILURE);
      |          ^~
hashmap.c:82:6: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   82 |   map->buckets = malloc(sizeof(Pair ) * capacity);
      |      ^~
hashmap.c:86:8: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   86 |     map->buckets[i] = NULL
      |        ^~
hashmap.c:87:3: error: expected ‘;’ before ‘}’ token
   87 |   }
      |   ^
hashmap.c:89:6: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   89 |   map->size = 0;
      |      ^~
hashmap.c:90:6: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   90 |   map->current = 1;
      |      ^~
hashmap.c:91:6: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   91 |   map->capacity = capacity;
      |      ^~
Compilation failed
be918a5
Thu 07 Sep 2023 05:35:50 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:79:17: error: invalid initializer
   79 |   HashMap map = malloc(sizeof(HashMap));
      |                 ^~~~~~
hashmap.c:80:10: error: invalid operands to binary == (have ‘HashMap’ {aka ‘struct HashMap’} and ‘void *’)
   80 |   if(map == NULL) exit(EXIT_FAILURE);
      |          ^~
hashmap.c:82:6: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   82 |   map->buckets = malloc(sizeof(Pair ) * capacity);
      |      ^~
hashmap.c:86:8: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   86 |     map->buckets[i] = NULL;
      |        ^~
hashmap.c:89:6: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   89 |   map->size = 0;
      |      ^~
hashmap.c:90:6: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   90 |   map->current = 1;
      |      ^~
hashmap.c:91:6: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   91 |   map->capacity = capacity;
      |      ^~
Compilation failed
a196677
Thu 07 Sep 2023 05:36:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/70
c578acb
Thu 07 Sep 2023 05:36:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/70
28102d4
Thu 07 Sep 2023 05:37:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/70
fecb772
Thu 07 Sep 2023 05:38:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
320df5a
Thu 07 Sep 2023 07:03:59 PM UTC: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:104:3: error: expected ‘,’ or ‘;’ before ‘if’
  104 |   if(map->buckets[pos] == NULL) return NULL;
      |   ^~
hashmap.c:117:7: error: expected ‘,’ or ‘;’ before ‘if’
  117 |       if(map->buckets[j] == NULL) return NULL;
      |       ^~
hashmap.c:121:25: error: expected ‘;’ before ‘return’
  121 |         map->current = j
      |                         ^
      |                         ;
  122 |         return map->buckets[j];
      |         ~~~~~~           
Compilation failed
bdef992
Thu 07 Sep 2023 07:04:36 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|5
total_score: 20/70
cf967c2
